--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,20 @@
+# MongoDB Connection
+MONGODB_URI=mongodb://localhost:27017/farmers_market
+
+# Server Configuration
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/farmers-market
-NODE_ENV=development 
+
+# Email Configuration for Hostinger
+EMAIL_HOST=smtp.hostinger.com
+EMAIL_PORT=465
+EMAIL_SECURE=true
+EMAIL_USER=contact@planetwiseliving.com
+EMAIL_PASS=your_email_password
+EMAIL_FROM=contact@planetwiseliving.com
+
+# Google Maps API Key
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+
+# Flask Environment
+FLASK_ENV=development
+# Set to 'production' on Render 
