--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: farmers-market-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn wsgi:app
+    startCommand: gunicorn wsgi_app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.11 
