--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 flask==2.0.1
 flask-cors==3.0.10
-pymongo==4.1.1
+pymongo[srv]==4.1.1
 python-dotenv==0.19.1
 pandas==1.5.3
 numpy==1.24.3
 werkzeug==2.0.1
-gunicorn==20.1.0 
+gunicorn==20.1.0
+dnspython==2.6.1 
