--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ ENV/
 
 # Environment Variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
 
 # Uploads directory
 uploads/
@@ -38,4 +43,28 @@ uploads/
 
 # OS specific files
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Dependencies
+node_modules/
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
+# Misc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment Variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.pyc 
